# rick-bot

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
src/rick_bot/: main.py
src/rick_bot/api/routes/: routes.py
src/rick_bot/app/api/v1/: routes.py
src/rick_bot/app/api/v1/repositories/: __init__.py  agent_repository.py  app_integration_repository.py  base_repository.py  conversation_repository.py  user_repository.py
src/rick_bot/app/auth/: auth_service.py  toke_response.py
src/rick_bot/app/auth/security/: get_current_user.py  jwt_handler.py
src/rick_bot/app/config/db/: database.py
src/rick_bot/app/config/redis/: redis.py
src/rick_bot/app/config/security/: security.py
src/rick_bot/app/contollers/: ask_controller.py  auth_controller.py  user_controller.py
src/rick_bot/app/domain/models/: __init__.py  agent.py  app_integration.py  base.py  conversation.py  user.py
src/rick_bot/app/domain/repositories/: agent_repository.py  base_repository.py  user_repository.py
src/rick_bot/app/domain/schemas/: agent.py  app_integration.py  base.py  conversation.py  request.py  user.py
src/rick_bot/app/execeptions.py/: exceptions.py
src/rick_bot/app/intefaces/: question_service_interface.py
src/rick_bot/app/services/: __init__.py  agent_service.py  appIntegration_service.py  auth_service.py  question_answeing.py  user_service.py  user_services.py
src/rick_bot/app/utils/: utils.py
src/rick_bot/config/db/: session.py
src/rick_bot/domain/models/: question.py
src/rick_bot/domain/schemas/: request.py
(+20 files in other folders)
